# BubbleGame

./: build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml  data.xml
app/src/main/assets/: Fonts.xml  GameResourceCfg.xml  Shaders.xml  ShadingPrograms.xml  Sounds.xml  Sprites.xml  Textures.xml
app/src/main/assets/fonts/: Connection_II.xml  Kidpixies.xml  Lucida.xml
app/src/main/assets/shaders/: base_fragment_shader.glsl  base_vertex_shader.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl
app/src/main/cpp/: Enemy.cpp  Enemy.h  Game.h  GameManager.cpp  GameManager.h  GameObjects.cpp  GameObjects.h  GameState.h  GameStrings.h  InstanceParticleEmitters.cpp  InstanceParticleEmitters.h  MusicController.cpp  MusicController.h  Player.cpp  Player.h  Stage.cpp  Stage.h  bubble_fighter-c.cpp
app/src/main/cpp/core/: ActivityHandler.h  AndroidDataProvider.cpp  AndroidDataProvider.h  AndroidDataStream.cpp  AndroidDataStream.h  AndroidInputHandler.h  Animator.cpp  Animator.h  AnimatorInstances.cpp  AnimatorInstances.h  Application.h  Color.cpp  Color.h  Controller.cpp  Controller.h  ControllerManager.cpp  ControllerManager.h  ControllerValues.h  DataProvider.h  DataStream.cpp  DataStream.h  Debug.cpp  Debug.h  Endianness.h  Engine.cpp  Engine.h  Exceptions.h  GLutils.cpp  GLutils.h  GraphicBuffer.cpp  GraphicBuffer.h  Image.cpp  Image.h  ImageSprite.cpp  ImageSprite.h  ImageSpriteManager.cpp  ImageSpriteManager.h  InputHandler.h  InputManager.cpp  InputManager.h  (+69 more)
app/src/main/cpp/core/_2d/: AnimatedSprite.cpp  AnimatedSprite.h  AxisAlignedBox.h  Camera.cpp  Camera.h  EmptyObject.cpp  EmptyObject.h  Entity.h  MaterialManager.cpp  MaterialManager.h  MovableObject.cpp  MovableObject.h  ObjectFactory.cpp  ObjectFactory.h  Particle.h  ParticleAffector.cpp  ParticleAffector.h  ParticleAffectors.cpp  ParticleAffectors.h  ParticleEmitters.cpp  ParticleEmitters.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsAffector.h  PhysicsAffectors.cpp  PhysicsAffectors.h  PhysicsSystem.cpp  PhysicsSystem.h  Quaternion.h  RenderQueue.h  Renderable.cpp  Renderable.h  RigidObject.cpp  RigidObject.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNodeFactory.h  Shape.h  (+7 more)
app/src/main/cpp/core/_2d/shapes/: Circle.cpp  Circle.h  Ellipse.h  LineArea.cpp  LineArea.h  Pill.cpp  Pill.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  ShapeMath.cpp  ShapeMath.h
app/src/main/cpp/utils/rapidxml/: rapidxml_utils.hpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
